gitea/_old/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: gitea
spec:
  serviceName: gitea
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.16.8
        ports:
        - containerPort: 3000
          name: gitea
        - containerPort: 22
          name: git-ssh
        volumeMounts:
        - mountPath: /data
          name: git-volume
          subPath: data
      volumes:
      - name: git-volume
        persistentVolumeClaim:
          claimName: gitea-data
          #initContainers:
          #- name: init-gitclone
          #  image: ajeetraina/alpine-git
          #  command: ['sh', '-c', "git clone -b kubernetes https://gitgitea.com/kooplex/kooplex-gitea.git /x || true"]
          #  volumeMounts:
          #    - mountPath: /x
          #      name: svc
          #      subPath: code
      nodeSelector:
        kubernetes.io/hostname: future1
      volumes:
      - name: git-volume
        persistentVolumeClaim:
          claimName: gitea-data
          #- name: nslcd
          #  configMap:
          #    name: nslcd
          #    items:
          #    - key: "nslcd"
          #      path: "nslcd.conf"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-mysql
  namespace: gitea
spec:
  serviceName: gitea-mysql
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: gitea-mysql
  template:
    metadata:
      labels:
        app: gitea-mysql
    spec:
      containers:
      - image: mariadb:10.5
        name: gitea-mysql
        volumeMounts:
        - name: git-volume
          mountPath: /var/lib/mysql/
          subPath: db
      nodeSelector:
        kubernetes.io/hostname: future1
      volumes:
        - name: git-volume
          persistentVolumeClaim:
            claimName: gitea-data
