gitea/_old/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  ports:
  - name: gitea
    port: 80
    targetPort: 3000
  selector:
    app: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-mysql
  namespace: gitea
spec:
  ports:
  - name: gitea-mysql
    port: 3306
    targetPort: 3306
  selector:
    app: gitea-mysql
