gitea/_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gitea.vo.elte.hu
    http:
      paths:
      - path: /
        backend:
          service: 
            name: gitea
            port: 
              number: 80
        pathType: Prefix
  tls:
  - hosts:
    - gitea.vo.elte.hu
    secretName: tls-gitea
